--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -64,6 +64,10 @@ header {
   max-width: 200px;
   max-height: 104px; }
 
+@media only screen and (max-height: 400px) {
+  header {
+    position: absolute; } }
+
 .footer {
   background: rgba(0, 0, 0, 0.863);
   padding: .7em .7em;
@@ -274,7 +278,15 @@ main .galeria .galeria__section {
 @media only screen and (min-width: 426px) {
   main .galeria .galeria__section div {
     width: 25%;
-    height: 12vw; } }
+    height: 12vw; }
+  main .galeria .galeria__section div:hover .max {
+    width: 40%;
+    height: 21.81vw;
+    left: 30%;
+    transform: translate(0, -22vw);
+    border: 2px solid black;
+    box-shadow: 1px 2px 7px 2px;
+    z-index: 20; } }
 
 @media only screen and (min-width: 1150px) {
   main .galeria {
