--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -47,6 +47,15 @@ main{
                         width: 25%;
                         height: 12vw;
                     }
+                    div:hover .max{
+                        width: 40%;
+                        height: 21.81vw;
+                        left: 30%;
+                        transform: translate(0, -22vw);
+                        border: 2px solid black;
+                        box-shadow: 1px 2px 7px 2px;
+                        z-index: 20;
+                    }
                 }
         }
     }
