--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -17,7 +17,7 @@ body ul {
   list-style: none; }
 
 body {
-  margin-top: 117px;
+  margin-top: 86px;
   background: rgba(255, 255, 255, 0.753); }
   body .btn {
     margin: 3px;
@@ -43,9 +43,9 @@ header {
     box-shadow: 1px 1px 15px 1px #505050; }
     header nav .navbar-brand {
       width: auto;
-      height: 100px; }
+      height: 70px; }
       header nav .navbar-brand img {
-        width: 100%;
+        width: 140px;
         height: auto; }
     header nav ul {
       display: flex;
@@ -64,9 +64,15 @@ header {
   max-width: 200px;
   max-height: 104px; }
 
-@media only screen and (max-height: 400px) {
+@media only screen and (max-height: 450px) {
+  body {
+    margin-top: 76px; }
   header {
-    position: absolute; } }
+    position: absolute; }
+    header nav .navbar-brand {
+      height: 60px; }
+      header nav .navbar-brand img {
+        width: 100px; } }
 
 .footer {
   background: rgba(0, 0, 0, 0.863);
@@ -166,7 +172,7 @@ header {
   .index .index__div--img {
     position: relative;
     width: 100%;
-    height: calc( 100vh - 110px);
+    height: calc( 100vh - 86px);
     grid-area: img; }
     .index .index__div--img img {
       width: 100%;
@@ -243,6 +249,10 @@ header {
     .index .index__div--iframe {
       align-self: center; } }
 
+@media only screen and (max-height: 450px) {
+  .index .index__div--img {
+    height: calc( 100vh - 76px); } }
+
 main .galeria .galeria__section {
   display: flex;
   flex-wrap: wrap;
@@ -283,7 +293,7 @@ main .galeria .galeria__section {
     width: 40%;
     height: 21.81vw;
     left: 30%;
-    transform: translate(0, -22vw);
+    transform: translate(0, -17vw);
     border: 2px solid black;
     box-shadow: 1px 2px 7px 2px;
     z-index: 20; } }
@@ -295,30 +305,33 @@ main .galeria .galeria__section {
     position: relative; }
     main .galeria .galeria__section {
       display: flex;
-      flex-wrap: wrap; }
+      flex-wrap: wrap;
+      position: static; }
       main .galeria .galeria__section div {
         width: 25%;
         height: 7vw; }
-      main .galeria .galeria__section .min {
-        transition: all .3s ease-out;
-        width: 100%;
-        height: 100%;
-        object-fit: cover; }
-      main .galeria .galeria__section .max {
-        top: 350px;
-        left: 75%; }
+        main .galeria .galeria__section div .min {
+          transition: all .3s ease-out;
+          width: 100%;
+          height: 100%;
+          object-fit: cover; }
+        main .galeria .galeria__section div .max {
+          top: 180px;
+          left: 75%; }
       main .galeria .galeria__section div:hover .min {
         width: 0;
         height: 0;
         border: none;
         box-shadow: none; }
       main .galeria .galeria__section div:hover .max {
+        position: fixed;
         width: 38vw;
         height: 25vw;
         border: 1px solid black;
         top: 180px;
-        left: 55%;
-        box-shadow: 2px 7px 15px 6px; } }
+        left: 57%;
+        box-shadow: 2px 7px 15px 6px;
+        transform: translate(0, 0); } }
 
 .servicio .servicio__ul {
   display: flex;
@@ -466,7 +479,7 @@ main .galeria .galeria__section {
       font-size: 1.3em;
       line-height: 1.5em; }
   .reserva .reserva__section--prim {
-    border-bottom: 3px dashed black; }
+    border-bottom: 3px dashed #2e4600; }
     .reserva .reserva__section--prim label {
       display: inline-block;
       width: 26%; }
