--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -51,7 +51,7 @@ main{
                         width: 40%;
                         height: 21.81vw;
                         left: 30%;
-                        transform: translate(0, -22vw);
+                        transform: translate(0, -17vw);
                         border: 2px solid black;
                         box-shadow: 1px 2px 7px 2px;
                         z-index: 20;
@@ -69,19 +69,20 @@ main{
             .galeria__section{
                 display: flex;
                     flex-wrap: wrap;
+                position: static;
                 div{
                     width: 25%;
                     height: 7vw;
-                }
-                .min{
-                    transition: all .3s ease-out;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-                .max{
-                    top: 350px;
-                    left: 75%;
+                    .min{
+                        transition: all .3s ease-out;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                    .max{
+                        top: 180px;
+                        left: 75%;
+                    }
                 }
                 div:hover .min{
                     width: 0;
@@ -90,12 +91,14 @@ main{
                     box-shadow: none;
                 }
                 div:hover .max{
+                    position: fixed;
                     width: 38vw;
                     height: 25vw;
                     border: 1px solid black;
                     top: 180px;
-                    left: 55%;
+                    left: 57%;
                     box-shadow: 2px 7px 15px 6px;
+                    transform: translate(0, 0);
                 }
             }
         }
