--- a/SCSS/_reserva.scss
+++ b/SCSS/_reserva.scss
@@ -16,7 +16,7 @@
         }
     }
     .reserva__section--prim{
-        border-bottom: 3px dashed black;
+        border-bottom: 3px dashed $colorVerdeOscuro;
         label{
             display: inline-block;
             width: 26%;
@@ -124,4 +124,7 @@
             }
         }
     }
+}
+@media only screen and (max-height: 450px){
+    
 }
