--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -97,7 +97,7 @@ main{
                     border: 1px solid black;
                     top: 180px;
                     left: 57%;
-                    box-shadow: 2px 7px 15px 6px;
+                    box-shadow: 2px 7px 15px;
                     transform: translate(0, 0);
                 }
             }
