--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,9 +1,9 @@
 $colorDorado:  #d9ff00;
 $colorSombra: #505050;
-$colorVerdeLima: #a2c523;
-$colorVerde: #00ff15;
-$colorVerdeOscuro:#2e4600;
-$colorBordo: #830505;
-$colorFondo: rgba(255, 255, 255, 0.753);
+$colorClaro: rgba(228, 228, 228, 0.973);
 $colorLetra: #555;
 $anchoMax: 100%;
+$colorPrincipal: #c5c1c0;
+$colorSecundario: #1a2930;
+$colorTerciario: #0a1612;
+$colorDetalles: #f7ce3e;
