--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -18,13 +18,18 @@ body ul {
 
 body {
   margin-top: 86px;
-  background: rgba(255, 255, 255, 0.753); }
+  background: #c5c1c0; }
   body .btn {
     margin: 3px;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.753); }
+    background-color: #c5c1c0;
+    border: 1px solid #0a1612;
+    color: #0a1612; }
   body .btn:hover {
-    background-color: #486b00; }
+    background-color: #0a1612;
+    border: 1px solid #f7ce3e;
+    color: #f7ce3e;
+    font-weight: bold; }
   body .li__a {
     color: #555555 !important; }
   body .li__a:visited {
@@ -37,32 +42,24 @@ header {
   top: 0;
   left: 0;
   z-index: 6; }
-  header nav {
+  header .navbar {
     color: #555555;
-    background: rgba(255, 255, 255, 0.753);
+    background: #c5c1c0;
     box-shadow: 1px 1px 15px 1px #505050; }
-    header nav .navbar-brand {
+    header .navbar .navbar-brand {
       width: auto;
       height: 70px; }
-      header nav .navbar-brand img {
+      header .navbar .navbar-brand .imgBoot {
         width: 140px;
         height: auto; }
-    header nav ul {
+    header .navbar ul {
       display: flex;
       list-style: none; }
-      header nav ul li {
+      header .navbar ul li {
         flex: 1;
         font-size: 1.25em;
         text-align: left;
         margin-bottom: 7px; }
-
-.imgBoot {
-  width: 25vw;
-  height: 13vw;
-  min-width: 100px;
-  min-height: 52px;
-  max-width: 200px;
-  max-height: 104px; }
 
 @media only screen and (max-height: 450px) {
   body {
@@ -112,7 +109,7 @@ header {
         margin: 2% 0;
         color: rgba(255, 255, 255, 0.8); }
         .footer address ul li a {
-          color: #a2c523;
+          color: #f7ce3e;
           font-size: 1em; }
   .footer .footer__form {
     display: flex;
@@ -121,7 +118,7 @@ header {
     padding: .2em .3em;
     margin: 0 auto;
     width: 90%;
-    color: rgba(255, 255, 255, 0.753);
+    color: rgba(228, 228, 228, 0.973);
     grid-area: newsletter; }
     .footer .footer__form label {
       color: rgba(255, 255, 255, 0.8);
@@ -132,14 +129,14 @@ header {
       padding: 10px 0; }
     .footer .footer__form .form-control {
       background: rgba(255, 255, 255, 0.8);
-      color: white;
+      color: #0a1612;
       width: 70%;
       margin-right: 10px;
       height: 3.7vw;
       min-height: 30px; }
     .footer .footer__form .form-control:focus {
-      box-shadow: 0 0 15px .33em #2e4600;
-      color: white; }
+      box-shadow: 0 0 15px 0.05rem #c5c1c0;
+      color: #0a1612; }
     .footer .footer__form .footer__form__button {
       width: 7vw;
       min-width: 30px;
@@ -149,7 +146,7 @@ header {
       background-repeat: no-repeat;
       border-radius: 10px; }
     .footer .footer__form .footer__form__button:hover {
-      box-shadow: 0 0 15px .33em #2e4600; }
+      box-shadow: 0 0 15px 0.05rem #c5c1c0; }
 
 @media only screen and (min-width: 600px) {
   .footer {
@@ -168,7 +165,7 @@ header {
       height: 3.7vw; } }
 
 .index {
-  background-color: rgba(255, 255, 255, 0.753); }
+  background-color: #c5c1c0; }
   .index .index__div--img {
     position: relative;
     width: 100%;
@@ -186,7 +183,7 @@ header {
       padding: 0 10px;
       color: white;
       text-transform: uppercase;
-      text-shadow: 3px 3px 3px #505050; }
+      text-shadow: 3px 3px 3px #1a2930; }
   .index .index__div--iframe {
     position: relative;
     padding-bottom: 53.85%;
@@ -227,9 +224,9 @@ header {
     grid-template-areas: "img img img primerParrafo primerParrafo" "segundoParrafo segundoParrafo iframe iframe iframe"; }
     .index h2 {
       font-size: 3em;
-      top: 65vh; }
+      top: 78vh; }
     .index .index__div--img {
-      height: calc(100vh - 110px); }
+      height: calc(100vh - 86px); }
     .index .index__p--prim {
       font-size: 1.2em;
       text-align: justify;
@@ -243,7 +240,6 @@ header {
     .index .index__p--segu {
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.849);
       padding: 3em;
       font-size: 1.2em; }
     .index .index__div--iframe {
@@ -330,7 +326,7 @@ main .galeria .galeria__section {
         border: 1px solid black;
         top: 180px;
         left: 57%;
-        box-shadow: 2px 7px 15px 6px;
+        box-shadow: 2px 7px 15px;
         transform: translate(0, 0); } }
 
 .servicio .servicio__ul {
@@ -365,7 +361,7 @@ main .galeria .galeria__section {
       margin: auto;
       font-size: 4vw;
       line-height: 1.6;
-      background-color: #486b00;
+      background-color: #1a2930;
       color: #fff;
       z-index: 2;
       text-transform: uppercase; }
@@ -373,16 +369,6 @@ main .galeria .galeria__section {
         grid-area: ul; }
         .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
           text-align: center; }
-      .servicio .servicio__ul .servicio__ul__li .info .carousel {
-        display: none;
-        width: 90%;
-        margin: auto;
-        grid-area: servicioImg; }
-        .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
-          width: 100%; }
-          .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
-            width: 100%;
-            height: auto; }
 
 .servicio .servicio__ul__li:hover img {
   transition: all .5s ease-in-out;
@@ -479,22 +465,26 @@ main .galeria .galeria__section {
       font-size: 1.3em;
       line-height: 1.5em; }
   .reserva .reserva__section--prim {
-    border-bottom: 3px dashed #2e4600; }
+    border-bottom: 3px dashed #0a1612; }
     .reserva .reserva__section--prim label {
       display: inline-block;
-      width: 26%; }
+      width: 26%;
+      align-self: center; }
+    .reserva .reserva__section--prim label:hover {
+      cursor: pointer; }
     .reserva .reserva__section--prim .form-control {
       width: 68%;
       height: 2.2em;
       margin: 4px 0;
-      color: #2e4600; }
+      color: #0a1612;
+      background-color: rgba(228, 228, 228, 0.973); }
     .reserva .reserva__section--prim select {
       width: 68%;
       height: 2.2em;
       margin: 4px 0; }
     .reserva .reserva__section--prim .form-control:focus {
-      box-shadow: 0 0 5px 0.25rem #5fba48;
-      color: #2e4600; }
+      box-shadow: 0 0 10px 0.1rem #1a2930;
+      color: #0a1612; }
   .reserva .reserva__section--secu label {
     width: 43%;
     margin: 3px auto;
@@ -502,7 +492,7 @@ main .galeria .galeria__section {
   .reserva .reserva__section--secu input {
     margin-right: 10px; }
   .reserva .reserva__section--terc {
-    border-bottom: 3px dashed #2e4600; }
+    border-bottom: 3px dashed #0a1612; }
     .reserva .reserva__section--terc label {
       width: 30%;
       justify-self: center;
@@ -526,7 +516,7 @@ main .galeria .galeria__section {
     .reserva .reserva__section--prim {
       grid-area: reservaA;
       width: 100%;
-      border-right: 3px dashed #2e4600; }
+      border-right: 3px dashed #0a1612; }
     .reserva .reserva__section--secu {
       grid-area: reservaB; }
     .reserva .reserva__section--terc {
@@ -551,7 +541,7 @@ main .galeria .galeria__section {
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      border-left: 3px dashed #2e4600; }
+      border-left: 3px dashed #0a1612; }
       .reserva .reserva__section--cuar input {
         font-size: 1em;
         width: 170px;
@@ -581,10 +571,10 @@ main .galeria .galeria__section {
       height: 2.2em;
       margin: 5px 0;
       background: #e2e2e2;
-      color: #2e4600; }
+      color: #0a1612; }
     .contacto .contacto__form .form-control:focus {
-      box-shadow: 0 0 5px 0.25rem #5fba48;
-      color: #2e4600; }
+      box-shadow: 0 0 10px 0.1rem #1a2930;
+      color: #0a1612; }
     .contacto .contacto__form div {
       width: 100%;
       text-align: center; }
