--- a/SCSS/_index.scss
+++ b/SCSS/_index.scss
@@ -1,5 +1,5 @@
 .index{
-    background-color: $colorFondo;
+    background-color: $colorPrincipal;
     .index__div--img{
         position: relative;
         width: 100%;
@@ -18,7 +18,7 @@
             padding: 0 10px;
             color: white;
             text-transform: uppercase;
-            text-shadow: 3px 3px 3px $colorSombra;
+            text-shadow: 3px 3px 3px $colorSecundario;
         }
     }
     .index__div--iframe{
@@ -76,10 +76,10 @@
             "segundoParrafo segundoParrafo iframe iframe iframe";
         h2{
             font-size: 3em;
-            top: 65vh;
+            top: 78vh;
         }
         .index__div--img{
-            height: calc(100vh - 110px);
+            height: calc(100vh - 86px);
         }
         .index__p--prim{
             b{
@@ -96,7 +96,6 @@
         .index__p--segu{
             width: 100%;
             height: 100%;
-            background-color: rgba(255, 255, 255, 0.849);
             padding: 3em;
             font-size: 1.2em;
         }
