--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -603,15 +603,17 @@ main .galeria .galeria__section {
 .error {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-areas: "none none" "titulo img" "sub1 img" "sub2 img"; }
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: "titulo img" "sub1 img" "sub2 img"; }
   .error .error__h1 {
+    padding: 20px;
     grid-area: titulo;
-    margin: 0 10px;
     text-align: justify; }
-  .error .error__sub--1 {
+  .error .error__sub1 {
+    padding: 20px;
     grid-area: sub1; }
-  .error .error__sub--2 {
+  .error .error__sub2 {
+    padding: 20px;
     grid-area: sub2; }
   .error .error__img {
     grid-area: img; }
