--- a/SCSS/_404.scss
+++ b/SCSS/_404.scss
@@ -1,21 +1,22 @@
 .error{
     display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        grid-template-areas: 
-        "none none"
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-areas:
         "titulo img"
         "sub1 img"
         "sub2 img";
     .error__h1{
+        padding: 20px;
         grid-area: titulo;
-        margin: 0 10px;
         text-align: justify;
     }
-    .error__sub--1{
+    .error__sub1{
+        padding: 20px;
         grid-area: sub1;
     }
-    .error__sub--2{
+    .error__sub2{
+        padding: 20px;
         grid-area: sub2;
     }
     .error__img{
