--- a/SCSS/_index.scss
+++ b/SCSS/_index.scss
@@ -54,15 +54,19 @@
 }
 @media only screen and (min-width: 354px){
     .index{
-        h2{
-            font-size: 2.5em;
+        .index__div--img{
+            h2{
+                font-size: 2.5em;
+            }
         }
     }
 }
 @media only screen and (min-width: 665px){
     .index{
-        h2{
-            font-size: 3em;
+        .index__div--img{
+            h2{
+                font-size: 3em;
+            }
         }
     }
 }
@@ -74,12 +78,11 @@
             grid-template-areas: 
             "img img img primerParrafo primerParrafo"
             "segundoParrafo segundoParrafo iframe iframe iframe";
-        h2{
-            font-size: 3em;
-            top: 78vh;
-        }
         .index__div--img{
             height: calc(100vh - 86px);
+            h2{
+                top: 68vh;
+            }
         }
         .index__p--prim{
             b{
@@ -95,7 +98,6 @@
         }
         .index__p--segu{
             width: 100%;
-            height: 100%;
             padding: 3em;
             font-size: 1.2em;
         }
