--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -337,93 +337,98 @@ main .galeria .galeria__section {
         box-shadow: 2px 7px 15px;
         transform: translate(0, 0); } }
 
-.servicio .servicio__ul {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative; }
-  .servicio .servicio__ul .servicio__ul__li {
-    position: relative;
-    border: 2px solid black; }
-    .servicio .servicio__ul .servicio__ul__li img {
-      width: 100%; }
-    .servicio .servicio__ul .servicio__ul__li h3 {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 1.2em;
-      color: white;
-      text-shadow: 3px 3px 3px #505050;
-      z-index: 3; }
-    .servicio .servicio__ul .servicio__ul__li h3:hover {
-      cursor: pointer; }
-    .servicio .servicio__ul .servicio__ul__li .info {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transform: rotateY(90deg);
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      font-size: 4vw;
-      line-height: 1.6;
-      background-color: #1a2930;
-      color: #fff;
-      z-index: 2;
-      text-transform: uppercase; }
-      .servicio .servicio__ul .servicio__ul__li .info .info__ul {
-        grid-area: ul; }
-        .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
-          text-align: center; }
+.accordion img {
+  width: 100%; }
 
-.servicio .servicio__ul__li:hover img {
-  transition: all .5s ease-in-out;
-  transform: rotateY(90deg);
-  transform-style: preserve-3d; }
-
-.servicio .servicio__ul__li:hover .info {
-  transition: .5s .5s ease-in-out;
-  transform: rotateY(0deg); }
-
-.servicio .servicio__ul__li img {
-  transition: .5s .5s ease-in-out;
-  transform: rotateY(0deg);
-  transform-style: preserve-3d; }
-
-.servicio .servicio__ul__li .info {
-  transition: all .5s ease-in-out;
-  transform: rotateY(90deg); }
-
-@media only screen and (min-width: 464px) {
+.servicio {
+  display: none; }
   .servicio .servicio__ul {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto; }
-    .servicio .servicio__ul .servicio__ul__li h3 {
-      top: 5px;
-      font-size: 1em; }
-    .servicio .servicio__ul .servicio__ul__li .info {
-      font-size: 2vw; }
-    .servicio .servicio__ul .simple {
-      grid-column: 1 / 3;
-      grid-row: 1; }
-    .servicio .servicio__ul .superior {
-      grid-column: 3 / 5;
-      grid-row: 1; }
-    .servicio .servicio__ul .king {
-      grid-column: 1 / 3;
-      grid-row: 2; }
-    .servicio .servicio__ul .jr {
-      grid-column: 3 / 5;
-      grid-row: 2; }
-    .servicio .servicio__ul .suite {
-      grid-column: 1 / 5;
-      grid-row: 3;
-      font-size: 1.5em; }
-      .servicio .servicio__ul .suite .info {
-        font-size: 4vw; } }
+    display: flex;
+    flex-wrap: wrap;
+    position: relative; }
+    .servicio .servicio__ul .servicio__ul__li {
+      position: relative;
+      border: 2px solid black; }
+      .servicio .servicio__ul .servicio__ul__li img {
+        width: 100%; }
+      .servicio .servicio__ul .servicio__ul__li h3 {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-size: 1.2em;
+        color: white;
+        text-shadow: 3px 3px 3px #505050;
+        z-index: 3; }
+      .servicio .servicio__ul .servicio__ul__li h3:hover {
+        cursor: pointer; }
+      .servicio .servicio__ul .servicio__ul__li .info {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: rotateY(90deg);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        font-size: 4vw;
+        line-height: 1.6;
+        background-color: #1a2930;
+        color: #fff;
+        z-index: 2;
+        text-transform: uppercase; }
+        .servicio .servicio__ul .servicio__ul__li .info .info__ul {
+          grid-area: ul; }
+          .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
+            text-align: center; }
+  .servicio .servicio__ul__li:hover img {
+    transition: all .5s ease-in-out;
+    transform: rotateY(90deg);
+    transform-style: preserve-3d; }
+  .servicio .servicio__ul__li:hover .info {
+    transition: .5s .5s ease-in-out;
+    transform: rotateY(0deg); }
+  .servicio .servicio__ul__li img {
+    transition: .5s .5s ease-in-out;
+    transform: rotateY(0deg);
+    transform-style: preserve-3d; }
+  .servicio .servicio__ul__li .info {
+    transition: all .5s ease-in-out;
+    transform: rotateY(90deg); }
+
+@media only screen and (min-width: 470px) {
+  .accordion {
+    display: none; }
+  .servicio {
+    display: block; }
+    .servicio .servicio__ul {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: auto; }
+      .servicio .servicio__ul .servicio__ul__li h3 {
+        top: 5px;
+        font-size: 1em; }
+      .servicio .servicio__ul .servicio__ul__li .info {
+        font-size: 2vw; }
+      .servicio .servicio__ul .simple {
+        grid-column: 1 / 3;
+        grid-row: 1; }
+      .servicio .servicio__ul .superior {
+        grid-column: 3 / 5;
+        grid-row: 1; }
+      .servicio .servicio__ul .king {
+        grid-column: 1 / 3;
+        grid-row: 2; }
+      .servicio .servicio__ul .jr {
+        grid-column: 3 / 5;
+        grid-row: 2; }
+      .servicio .servicio__ul .suite {
+        grid-column: 1 / 5;
+        grid-row: 3;
+        font-size: 1.5em; }
+        .servicio .servicio__ul .suite .info {
+          font-size: 4vw; } }
 
 @media only screen and (min-width: 900px) {
   .servicio .servicio__ul {
