--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  user-select: none; }
 
 body a {
   text-decoration: none;
@@ -15,6 +16,10 @@ body ul {
   margin: 0;
   padding: 0;
   list-style: none; }
+
+@media only screen and (min-width: 1260px) {
+  * {
+    user-select: text; } }
 
 body {
   margin-top: 86px;
@@ -226,7 +231,7 @@ header {
   .index .index__div--img h2 {
     font-size: 3em; } }
 
-@media only screen and (min-width: 1281px) {
+@media only screen and (min-width: 1260px) {
   .index {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
