--- a/SCSS/_reset.scss
+++ b/SCSS/_reset.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
 }
 body{
     a{
@@ -16,5 +17,10 @@ body{
         margin: 0;
         padding: 0;
         list-style: none;
+    }
+}
+@media only screen and (min-width: 1260px){
+    *{
+        user-select: text;
     }
 }
