--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -530,11 +530,72 @@ main .galeria .galeria__section {
       cursor: pointer; }
     .reserva .reserva__section--terc input {
       margin: 2%; }
-  .reserva .reserva__section--cuar input {
-    font-size: .75em;
-    margin: 10px 1.5%;
-    width: 27.33333%;
-    max-width: 115px; }
+  .reserva .reserva__section--cuar div {
+    width: 50%; }
+    .reserva .reserva__section--cuar div input {
+      font-size: .75em;
+      margin: 10px 25%;
+      width: 94%;
+      max-width: 115px; }
+  .reserva .reserva__section--cuar a {
+    width: 50%; }
+    .reserva .reserva__section--cuar a input {
+      font-size: .75em;
+      margin: 10px 25%;
+      width: 94%;
+      max-width: 115px; }
+  .reserva .reserva__section--cuar .anim {
+    animation-name: anim;
+    animation-duration: 2s;
+    animation-iteration-count: infinite; }
+  .reserva .reserva__section--cuar .anim:hover {
+    animation-name: none; }
+
+@keyframes anim {
+  0% {
+    background-color: #c5c1c0; }
+  50% {
+    background-color: #0a1612;
+    color: #f7ce3e;
+    border: 1px solid #f7ce3e; }
+  100% {
+    background-color: #c5c1c0; } }
+
+.overlay {
+  position: fixed;
+  top: 86px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 1s;
+  visibility: hidden;
+  opacity: 0; }
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+  z-index: 10; }
+
+#popupBody {
+  width: 46%;
+  padding: 2%;
+  border-radius: 15px;
+  box-shadow: 0 0 5px #CCC;
+  background: #FFF;
+  position: relative;
+  margin: 20% auto;
+  transition: all 5s ease-in-out; }
+
+#cerrar {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #F00;
+  transition: all 200ms; }
 
 @media only screen and (min-width: 640px) {
   .reserva {
@@ -565,10 +626,9 @@ main .galeria .galeria__section {
     .reserva .reserva__section--terc {
       border-bottom: 0; }
     .reserva .reserva__section--cuar {
-      display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-around;
       border-left: 3px dashed #0a1612; }
       .reserva .reserva__section--cuar input {
         font-size: 1em;
