--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -530,18 +530,13 @@ main .galeria .galeria__section {
       cursor: pointer; }
     .reserva .reserva__section--terc input {
       margin: 2%; }
-  .reserva .reserva__section--cuar div {
+  .reserva .reserva__section--cuar div, .reserva .reserva__section--cuar a {
+    display: flex;
+    justify-content: center;
     width: 50%; }
-    .reserva .reserva__section--cuar div input {
+    .reserva .reserva__section--cuar div input, .reserva .reserva__section--cuar a input {
       font-size: .75em;
-      margin: 10px 25%;
-      width: 94%;
-      max-width: 115px; }
-  .reserva .reserva__section--cuar a {
-    width: 50%; }
-    .reserva .reserva__section--cuar a input {
-      font-size: .75em;
-      margin: 10px 25%;
+      margin: 10px 0;
       width: 94%;
       max-width: 115px; }
   .reserva .reserva__section--cuar .anim {
@@ -563,12 +558,12 @@ main .galeria .galeria__section {
 
 .overlay {
   position: fixed;
-  top: 86px;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.7);
-  transition: opacity 1s;
+  transition: opacity .5s;
   visibility: hidden;
   opacity: 0; }
 
@@ -581,16 +576,16 @@ main .galeria .galeria__section {
   width: 46%;
   padding: 2%;
   border-radius: 15px;
-  box-shadow: 0 0 5px #CCC;
-  background: #FFF;
+  box-shadow: 0 0 5px #c5c1c0;
+  background: #c5c1c0;
   position: relative;
   margin: 20% auto;
   transition: all 5s ease-in-out; }
 
 #cerrar {
   position: absolute;
-  top: 20px;
-  right: 30px;
+  top: 0;
+  right: 10px;
   font-size: 30px;
   font-weight: bold;
   text-decoration: none;
@@ -612,10 +607,12 @@ main .galeria .galeria__section {
       grid-area: reservaC; }
     .reserva .reserva__section--cuar {
       grid-area: reservaD; }
-      .reserva .reserva__section--cuar input {
-        font-size: 1.2em;
-        width: 20%;
-        max-width: none; } }
+      .reserva .reserva__section--cuar div, .reserva .reserva__section--cuar a {
+        display: flex;
+        align-items: center; }
+        .reserva .reserva__section--cuar div input, .reserva .reserva__section--cuar a input {
+          font-size: 1.2em;
+          max-width: 180px; } }
 
 @media only screen and (min-width: 1023px) {
   .reserva {
@@ -630,10 +627,15 @@ main .galeria .galeria__section {
       align-items: center;
       justify-content: space-around;
       border-left: 3px dashed #0a1612; }
-      .reserva .reserva__section--cuar input {
-        font-size: 1em;
-        width: 170px;
-        max-width: none; } }
+      .reserva .reserva__section--cuar div, .reserva .reserva__section--cuar a {
+        display: flex;
+        align-items: center;
+        width: 95%; }
+        .reserva .reserva__section--cuar div input, .reserva .reserva__section--cuar a input {
+          margin: 0 auto;
+          font-size: 1em;
+          width: 170px;
+          max-width: none; } }
 
 .contacto {
   padding-top: 20px;
@@ -691,7 +693,7 @@ main .galeria .galeria__section {
 .error {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   grid-template-areas: "titulo img" "sub1 img" "sub2 img"; }
   .error .error__h1 {
     padding: 20px;
@@ -704,4 +706,5 @@ main .galeria .galeria__section {
     padding: 20px;
     grid-area: sub2; }
   .error .error__img {
-    grid-area: img; }
+    grid-area: img;
+    margin: 0 0 0 auto; }
