--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -1,8 +1,8 @@
 .footer{
     background: rgba(0, 0, 0, 0.863);
-    padding: 0 .7em .7em;
+    padding: .5em .7em .7em;
     font-size: 1em;
-    margin: 0;
+    margin:0;
     z-index: 10;
     .footer__ul{
         display: flex;
