--- a/SCSS/_componentes.scss
+++ b/SCSS/_componentes.scss
@@ -36,8 +36,9 @@ header{
             width: auto;
             height: 70px;
             .imgBoot{
-            width: 140px;
-            height: auto;
+                margin: 0 60px;
+                width: 140px;
+                height: auto;
             }
         }
         ul{
