--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,6 +1,5 @@
 .contacto{
     padding-top: 20px;
-    margin: 15px;
     .contacto__add{
         address{
             width: $anchoMax;
@@ -14,7 +13,7 @@
             flex-wrap: wrap;
             justify-content: center;
         padding: .2em .3em;
-        margin: 0 10px;
+        margin: 20px 10px;
         label{
             align-self: center;
             text-align: center;
@@ -40,17 +39,16 @@
     }
     .contacto__ubic{
             grid-area: ubicacion;
-        margin: 8px 0;
+        margin: 0;
         iframe{
-            width: 95%;
-            margin: 4px 2.5%;
+            width: 100%;
         }
     }
 }
 @media only screen and (min-width: 640px){
     .contacto{
         display: grid;
-            grid-template-columns: 33% 66%;
+            grid-template-columns: 34% 66%;
             grid-template-rows: auto;
             grid-template-areas: 
             "address contactoForm"
