--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -61,6 +61,7 @@
         display: grid;
             grid-template-columns: 50%;
         position: relative;
+        margin-left: 50px;
         .galeria__section{
             display: flex;
                 flex-wrap: wrap;
